--- a/Pset1.Rmd
+++ b/Pset1.Rmd
@@ -114,7 +114,7 @@ mixed <- lmer(value ~ 1 + (1|person) + (1|item) + (1|occasion) + (1|pxi) +
 summary(mixed)
 ```
 
-11) \textbf{A novice psychometrician with no sense of the context observes from the percentages, “it looks like items are a much greater source of variance than occasions!”  Explain the flaw in this reasoning.}
+11) \textbf{A novice psychometrician with no sense of the context observes from the percentages, “it looks like items are a much greater source of variance than occasions!” Explain the flaw in this reasoning.}
 
 The novice is not taking into account the fact that there are many more items than occasions. Moreover, the cost of adding additional items may be quite low, especially as compared to adding another test. 
 
@@ -155,8 +155,10 @@ The $o$ variance component describes variance across occasions (constant across 
 
 As a rule, we know that any source of variability that intersects with the object of measurement (in this case persons) will change the measurement's relative position. In the case of a $p \times i \times o$ design, the relative error variance will include $\sigma^2_{pi}$, $\sigma^2_{po}$, and $\sigma^2_{pio,e}$ (see Figure). These variance components refer to single-unit replications, so we must divide by the relevant number of items and occasions to obtain error for average scores (over items and occasions). So the full equation for relative error variance is:
 
-$$\sigma^2_{\delta}=\frac{\sigma^2_{pi}}{n'_i}+\frac{\sigma^2_{pr}}{n'_o} + \frac{\sigma^2_{pri,e}}{n'_i n'_o}$$
+$$\sigma^2_{\delta}=\frac{\sigma^2_{pi}}{n'_i}+\frac{\sigma^2_{po}}{n'_o} + \frac{\sigma^2_{pio,e}}{n'_i n'_o}$$
 where $n'i$ and $n'o$ are the number of items and number of occasions of a hypothetical (') test design (what \emph{could be} rather than what \emph{was} in the G-study data).
+
+From Question 10, we know that $\sigma^2_{pi}=0.487$, $\sigma^2_{po} = 0.102$, and $\sigma^2_{pio,e} = 0.741$. So we can calculate $\sigma^2_{\delta}}=\frac{0.487}{12}+\frac{0.102}{2} + \frac{0.741}}{12 \times 2}=0.122$ for 12 items and two occasions. 
 
 ```{r,echo=F,fig.align='center',fig.width=5,fig.height=3}
 knitr::include_graphics('./Fig_Q15.jpg')
@@ -166,7 +168,12 @@ The relative error does not include error terms $\sigma^2_i$ or $\sigma^2_o$ bec
 
 16) \textbf{Calculate the generalization coefficient for relative error, $E\hat{\rho}^2$, when there are 12 items administered on one occasion.  Explain the differences between this coefficient, the coefficients from Question 5, and the coefficient from Question 6.  Explain the differences between the questions that these different coefficients answer.}
 
-17) \textbf{Use the “pxixr D Study Template” to include a graph of a) the standard error of measurement and b) the generalizability coefficient for relative error.  Relabel and rescale where appropriate.}
+The generalization coefficient for relative error, $E\hat{\rho}^2 = \frac{\sigma^2_p}{\sigma^2_p + \sigma^2_{\delta}}$.
+
+ And from Question 15, we know ${\sigma^2_p}= 0.573$. Plugging in these numbers into the above equation we get:
+$$E\hat{\rho}^2 = \frac{0.573}{0.573 + 0.122}=0.824$$
+
+17) \textbf{Use the “$p \times i \times r$ D Study Template” to include a graph of a) the standard error of measurement and b) the generalizability coefficient for relative error. Relabel and rescale where appropriate.}
 
 18) \textbf{If the scale is administered on 1 occasion, how many items are required to achieve a reliability of 0.75? You can use the template to answer this.}
 
