Added in Vinh's stuff, made sure it ran

--- a/Pset1.Rmd
+++ b/Pset1.Rmd
@@ -19,9 +19,23 @@ library(tidyr)
 
 1) \textbf{On the basis of this correlation, the researcher states that the reliability of the ratings is 0.7.  What score is she assuming is relevant, that has a reliability of 0.7? Is it the score from e-Rater A? The score from e-Rater B? Some combination of both scores? A score from any single e-Rater? Or other?}
 
+The researcher is referring to the reliability of the score generating processes by the population of random e-Raters with different scoring algorithms for this specific essay prompt, from which e-Raters A and B came.  We can think of this as the inter-rater reliability 
+
 2) \textbf{If the researcher considers 0.7 to be the reliability, what is the replication that she assumes is relevant?  What is random, and what is fixed?}
 
+The replication is the scoring process involving a random e-Rater (or, scoring algorithm).  The e-Rater/scoring algorithm is random, but the students, form, and testing occasion are fixed.
+
+
 3) \textbf{Apply Spearman-Brown (actually perform a calculation) to estimate the reliability of the average these two e-Rater scores.}
+
+```{r}
+#create function to calculate Spearman-Brown
+SB_Rho<-function(k,rho){
+  return(k*rho/(1+(k-1)*rho))
+}
+
+SB_Rho(2,.7)
+```
 
 4) \textbf{The company asks you what a valid use of the third score would be. Remember this score is available for only 10\% of examinees. Should the company use this score alone? Should it use the unweighted average of the three scores (the two e-rater scores and the human score)?  Should it ignore the score and use the average of the two e-Rater scores?  Answer the following questions:}
     a) \textbf{If you were an examinee with a high (well above average) true score, would you rather have the human score, the average of the two e-rater scores, or the average of all three scores?}
@@ -155,10 +169,10 @@ The $o$ variance component describes variance across occasions (constant across 
 
 As a rule, we know that any source of variability that intersects with the object of measurement (in this case persons) will change the measurement's relative position. In the case of a $p \times i \times o$ design, the relative error variance will include $\sigma^2_{pi}$, $\sigma^2_{po}$, and $\sigma^2_{pio,e}$ (see Figure). These variance components refer to single-unit replications, so we must divide by the relevant number of items and occasions to obtain error for average scores (over items and occasions). So the full equation for relative error variance is:
 
-$$\sigma^2_{\delta}=\frac{\sigma^2_{pi}}{n'_i}+\frac{\sigma^2_{po}}{n'_o} + \frac{\sigma^2_{pio,e}}{n'_i n'_o}$$
+$$\sigma^2_\delta=\frac{\sigma^2_{pi}}{n'_i}+\frac{\sigma^2_{po}}{n'_o} + \frac{\sigma^2_{pio,e}}{n'_i n'_o}$$
 where $n'i$ and $n'o$ are the number of items and number of occasions of a hypothetical (') test design (what \emph{could be} rather than what \emph{was} in the G-study data).
 
-From Question 10, we know that $\sigma^2_{pi}=0.487$, $\sigma^2_{po} = 0.102$, and $\sigma^2_{pio,e} = 0.741$. So we can calculate $\sigma^2_{\delta}}=\frac{0.487}{12}+\frac{0.102}{2} + \frac{0.741}}{12 \times 2}=0.122$ for 12 items and two occasions. 
+From Question 10, we know that $\sigma^2_{pi}=0.487$, $\sigma^2_{po} = 0.102$, and $\sigma^2_{pio,e} = 0.741$. So we can calculate $\sigma^2_\delta=\frac{0.487}{12}+\frac{0.102}{2} + \frac{0.741}{12 \times 2}=0.122$ for 12 items and two occasions. 
 
 ```{r,echo=F,fig.align='center',fig.width=5,fig.height=3}
 knitr::include_graphics('./Fig_Q15.jpg')
@@ -168,7 +182,7 @@ The relative error does not include error terms $\sigma^2_i$ or $\sigma^2_o$ bec
 
 16) \textbf{Calculate the generalization coefficient for relative error, $E\hat{\rho}^2$, when there are 12 items administered on one occasion.  Explain the differences between this coefficient, the coefficients from Question 5, and the coefficient from Question 6.  Explain the differences between the questions that these different coefficients answer.}
 
-The generalization coefficient for relative error, $E\hat{\rho}^2 = \frac{\sigma^2_p}{\sigma^2_p + \sigma^2_{\delta}}$.
+The generalization coefficient for relative error, $E\hat{\rho}^2 = \frac{\sigma^2_p}{\sigma^2_p + \sigma^2_\delta}$.
 
  And from Question 15, we know ${\sigma^2_p}= 0.573$. Plugging in these numbers into the above equation we get:
 $$E\hat{\rho}^2 = \frac{0.573}{0.573 + 0.122}=0.824$$
